--- a/20231203.052606_p127_r10_t512_g0_done.yaml
+++ b/20231203.052606_p127_r10_t512_g0_done.yaml
@@ -2,6 +2,8 @@ datetime_end: '2023-12-03 10:36:32.490766'
 datetime_start: '2023-12-03 05:26:06.088306'
 datetime_total_time: '5:10:26.402460'
 model: /home/siara/llama-2-7b-chat.Q2_K.gguf
+n_gpu_layers: 0
+num_runs_per_prompt: 10
 prompts:
   -33.3*13.4:
   - choices:
